@@ -1,4 +1,4 @@
-C RCS $Id: gnuplot.doc,v 1.687 2011/08/25 20:55:13 sfeam Exp $
+C RCS $Id: gnuplot.doc,v 1.688 2011/08/27 11:18:01 juhaszp Exp $
 C
 C Copyright (C) 1986 - 1993, 1998, 1999, 2000, 2001, 2004   Thomas Williams, Colin Kelley et al.
 C
@@ -3658,11 +3658,6 @@ Ffigure_labels
 
    splot 'datafile' using 1:2:3:4 with labels
 
- If you want to select input columns by name, you have the `stringcolumn` 
- (or `strcol`) function to specify the column that contains the labels:
-
-   plot 'datafile' using "X":"Y":(strcol("label")) with labels
-
  See also `datastrings`, `set style data`.
 2 lines
 ?commands set style lines
@@ -5870,9 +5865,6 @@ C^ <img align=bottom src="http://www.gnuplot.info/doc/population.gif" alt="[popu
        plot 'datafile' using (column("Age")):(column(1)), \
                     '' using (column("Age")):(column(2))
        plot 'datafile' using "Age":"Height", '' using "Age":"Weight"
-
- The `labels` style needs a slightly different syntax:
-      plot 'datafile' using "Age":"Height":(strcol("Weight")) with labels
 
  To use the column labels in the plot legend, use 
  `set key autotitle columnhead`.
